# misc

./: README.md
bfc/: bfc.c
bfck-c/: README.md  bfck.c  bfmisc.c  bfmisc.h  bfops.c  bfops.h
bfck-py/: README.md  bfck.py  randfile.c
hextools/: LICENSE  README.md  hexin.hs  hexout.hs  hextools.cabal
ias/: .local.vimrc  README.md  ias.py  iasop.py  test.asm
ias-old/: README.md  a.asm  ias.py  iasop.py  t.asm  tmp.asm  tmp2.asm
spin/: README.md  spin.c
todo/: README.md  todo.c
weechat-plugins/: README.md
weechat-plugins/c/misc/: decide.c  misc.c
weechat-plugins/misc/: Makefile  bufname.c  bufname.h  decide.c  decide.h  misc.c  misc.h
weechat-scripts/: README.md  misc_stuff.py
weechat-scripts/c/misc/: misc.c
weechat-scripts/python/: misc_stuff.py
