name:                hextools
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              spoonm
maintainer:          spoonm@spoonm.org
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hexin
  main-is:             hexin.hs
  build-depends:       base >=4.10 && <4.11, bytestring >=0.10.8.2
  default-language:    Haskell98

executable hexout
  main-is:             hexout.hs
  build-depends:       base >=4.10 && <4.11, bytestring >=0.10.8.2
  default-language:    Haskell98
